@@ -461,4 +461,7 @@ Jeff Smith <whydoubt@yahoo.com>
 Yann Vernier <yann@algonet.se>
   Via Ezra cpu detection
 
+David Woodhouse
+  file (wave) audio out plugin
+
 (let us know if we've forgotten anyone)
