@@ -42,7 +42,8 @@ endif
 # all xine audio out plugins should be named like the 
 # scheme "xineplug_ao_out_"
 #
-lib_LTLIBRARIES = xineplug_ao_out_none.la $(oss_module) \
+lib_LTLIBRARIES = xineplug_ao_out_none.la xineplug_ao_out_file.la \
+	$(oss_module) \
 	$(alsa_module) \
 	$(sun_module) \
 	$(arts_module) \
@@ -60,6 +61,10 @@ lib_LTLIBRARIES = xineplug_ao_out_none.la $(oss_module) \
 xineplug_ao_out_none_la_SOURCES = audio_none_out.c
 xineplug_ao_out_none_la_LIBADD = $(XINE_LIB)
 xineplug_ao_out_none_la_LDFLAGS = -avoid-version -module @XINE_PLUGIN_MIN_SYMS@
+
+xineplug_ao_out_file_la_SOURCES = audio_file_out.c
+xineplug_ao_out_file_la_LIBADD = $(XINE_LIB)
+xineplug_ao_out_file_la_LDFLAGS = -avoid-version -module @XINE_PLUGIN_MIN_SYMS@
 
 xineplug_ao_out_oss_la_SOURCES = audio_oss_out.c
 xineplug_ao_out_oss_la_LIBADD = $(XINE_LIB)
